# news-digester

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  index.html  metadata.json  nginx.conf  opencode.json  package-lock.json  package.json  playwright.config.ts  seed.ts  tui.json  vite.config.ts
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_feed_sources.py  0003_reports_and_feedback.py  0004_content_and_runs.py  0005_preferences.py  0006_content_cluster_item_count.py  0007_content_item_score_lead.py  0008_reports_metadata_json.py  0009_users.py  0010_content_item_source_entry_id.py  0011_feed_source_last_error_at.py  0012_widen_source_entry_id.py  0013_feed_reliability_tracking.py  0014_content_columns_pass4a.py  0015_publisher_info_columns.py
backend/app/: __init__.py  celery_app.py  config.py  demo_seed.py  main.py  seed.py
backend/app/api/: content.py  feedback.py  feeds.py  preferences.py  reports.py  runs.py  session.py  workspaces.py
backend/app/db/: session.py
backend/app/models/: __init__.py  content.py  feed.py  preferences.py  report.py  run.py  user.py  workspace.py
backend/app/schemas/: __init__.py  content.py  feed.py  report.py  run.py  session.py  workspace.py
backend/app/services/: clustering.py  content.py  dedup.py  feed.py  feedback.py  pipeline.py  (+12 more)
(+169 files in other folders)
